Fix odd day id alignment

--- a/styles/Turn.module.css
+++ b/styles/Turn.module.css
@@ -43,26 +43,21 @@
 .day {
   position: relative;
   font-weight: inherit;
+  padding-right: 0.5em;
+  display: flex;
 }
 
 .day span {
-  position: absolute;
-
   background: rgb(var(--foreground-rgb));
   color: rgb(var(--background-rgb));
 
   font-size: 0.8em;
 
-  width: 2em;
-  height: 1.5em;
-  line-height: 1.5em;
+  line-height: 0.9em;
   border-radius: var(--fillet);
+  outline: 0.25em solid rgb(var(--foreground-rgb));
 
-  left: calc(50% - 0.5em / 2);
-  top: 50%;
-  transform: translate(-50%, -50%);
-
-  z-index: 0;
+  flex: 1;
 }
 
 .td {
